syntax = "proto3";

package game;
option go_package = "/quic";


message TankRemove {
  int64 id = 1;
}

message Tank {
  int64 id = 1;
  int32 x = 2;
  int32 y = 3;
  int32 direction = 4;
  int32 kill = 5;
  uint64 color = 6;
  string name = 7;
  bool isDead = 8;
}

message GetTankList {
  repeated Tank tank = 1;
}


message TankMove {
  int64 id = 1;
  int32 direction = 2;
}



